Bug 54648 - Writer WW8 EXPORT: LibreOffice Crashes saving .doc file with invisible pictures
Summary: Writer WW8 EXPORT: LibreOffice Crashes saving .doc file with invisible pictures
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium critical
Assignee: Michael Stahl
URL:
Whiteboard: target:3.7.0 target:3.6.3
Keywords: regression
: 55141 55422 55790 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-07 16:38 UTC by Ryan McLaughlin
Modified: 2012-10-17 08:47 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
file that cannot be saved (66.00 KB, application/msword)
2012-09-07 16:38 UTC, Ryan McLaughlin
Details
bt + console logs on master (17.08 KB, text/plain)
2012-09-07 22:35 UTC, Julien Nabet
Details
valgrind logs (53.06 KB, application/x-gzip)
2012-09-07 22:52 UTC, Julien Nabet
Details
my test case document (119.50 KB, application/msword)
2012-09-22 06:46 UTC, sasha.libreoffice
Details
my bt, produced in self-compiled 3.6.1 on Fedora 64 bit (912.43 KB, text/plain)
2012-09-22 06:49 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan McLaughlin 2012-09-07 16:38:32 UTC
Created attachment 66806 [details]
file that cannot be saved

Version 3.6.0.4 (Build ID: 932b512)

I received a .doc file and I needed to fill it out and send it back. When saving it LibreOffice crashes and I cannot save. I have tried about 5 times and it is always the same. I can export to PDF, and save as odt just fine, but when I try and save as .doc it crashes.

I will attach the file that is causing the problem.
Comment 1 Julien Nabet 2012-09-07 22:35:33 UTC
Created attachment 66823 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated today, I reproduced the crash.
Comment 2 Julien Nabet 2012-09-07 22:37:16 UTC
I increased a little the importance since it's a crash and it's happening at least on 2 environments.
Comment 3 Julien Nabet 2012-09-07 22:52:03 UTC
Created attachment 66824 [details]
valgrind logs

Attached complete valgrind logs
Comment 4 sasha.libreoffice 2012-09-22 06:44:32 UTC
Thanks for bugreport
I have also encountered this problem with my own document. It reproducible with both my own document and first attachment in 3.6.0 on Windows XP 32 bit and in 3.6.1 on Fedora 64 bit.
But not reproducible in 3.5.5 on Fedora, therefore regression
Comment 5 sasha.libreoffice 2012-09-22 06:46:28 UTC
Created attachment 67531 [details]
my test case document
Comment 6 sasha.libreoffice 2012-09-22 06:49:12 UTC
Created attachment 67532 [details]
my bt, produced in self-compiled 3.6.1 on Fedora 64 bit
Comment 7 sasha.libreoffice 2012-09-22 06:51:25 UTC
@ Michael
Greetings
What do You think about this bug?
Comment 8 Not Assigned 2012-10-09 16:09:51 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1d2eed375293d7c27bb885f344cc24ec0cd40ca

fdo#54648: WW8 export: test that FlyFrm actually has layout frm



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2012-10-09 16:25:13 UTC
problem is that the bugdocs contain graphics that are imported
as "hidden" or "invisible" for some reason, so they don't have
layout frames.

the code that crashes was introduced in commit
 d21e1215f6a1742a52638a79582c7c833dd8869a
Comment 10 Not Assigned 2012-10-10 08:17:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffb06e5eaadabf2d80277a3f8808957fca8b3b0e&g=libreoffice-3-6

fdo#54648: WW8 export: test that FlyFrm actually has layout frm


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2012-10-10 12:44:55 UTC
*** Bug 55422 has been marked as a duplicate of this bug. ***
Comment 12 Michael Stahl 2012-10-10 12:50:11 UTC
*** Bug 55141 has been marked as a duplicate of this bug. ***
Comment 13 sasha.libreoffice 2012-10-10 14:08:04 UTC
Thanks for fixing this bug
Comment 14 Rainer Bielefeld Retired 2012-10-13 08:13:31 UTC
A Drawing element for me means something like a DRAW Smiley Shape or similar. But the sample document seems to contain pixel pictures, so I modified summary. Please feel free to revert if I am wrong.
Comment 15 Rainer Bielefeld Retired 2012-10-13 08:16:53 UTC
*** Bug 55790 has been marked as a duplicate of this bug. ***
Comment 16 Roman Eisele 2012-10-17 08:47:48 UTC
VERIFIED as FIXED:

while I can reproduce the crash on Mac OS X 10.6.8 (Intel) with
  LOdev 3.7.0.0.alpha0+ (build ID: 1ae1bca; pull time: 2012-10-09 04:37:06)
I can no longer reproduce it on the same machine with
  LOdev 3.7.0.0.alpha0+ (build ID: c252694; pull time: 2012-10-12 22:05:41)
.