fdo#54648: WW8 export: test that FlyFrm actually has layout frm

The bugdoc has 2 "hidden" drawing objects that are invisible.

Change-Id: I58179f2e620348db5357b38f834e1edca1f20ae2